# flyby

./: .travis.yml  AUTHORS  CMakeLists.txt  README.Debian  README.md  build  debian-copyright  fetch_satnogs_db.py  flyby.c  flyby_config.c  flyby_config.h  flyby_defines.h  flyby_defs.h  flyby_hamlib.c  flyby_hamlib.h  flyby_main.c  flyby_ui.c  flyby_ui.h  flyby_whitelist.c  installer.c  main.c  predict-g1yyh.c  predict.c  predict.h  qth_config.c  removed_functions.c  string_array.c  string_array.h  tle_db.c  tle_db.h  transponder_db.c  transponder_db.h  update-tle  xdg_basedirs.c
clients/WinPredictClient/: frmWinPredictClient.frm
clients/earthtrack/: earthtrack-old.c  earthtrack-really-old.c  earthtrack.c
clients/gsat-1.1.0/: AUTHORS  Makefile.am  README  config.rpath  configure.in
clients/gsat-1.1.0/plugins/: Makefile  radio_FT847.c  radio_rigctld.c  rotor_rotctld.c
clients/gsat-1.1.0/po/: Makefile.in.in
clients/gsat-1.1.0/src/: comms.c  globals.h  interface.c
clients/map/: map.c  map_cb.c  map_main.c
default/: flyby.db  flyby.tle
docs/: glossary.md  usage_guide.md
docs/generation_scripts/: README  capture-screenshots.sh  convert-help-to-manformat.sh
docs/man/: flyby.man  geosat.man  predict-g1yyh.man  predict.man
src/: config.h.in  defines.h  field_helpers.c  field_helpers.h  filtered_menu.c  filtered_menu.h  flyby_whitelist.c  hamlib.c  hamlib.h  hamlib_settings.c  hamlib_settings.h  hamlib_status.c  hamlib_status.h  locator.c  locator.h  main.c  multitrack.c  multitrack.h  option_help.c  option_help.h  prediction_schedules.c  prediction_schedules.h  qth_config.c  qth_config.h  singletrack.c  singletrack.h  string_array.c  string_array.h  tle_db.c  tle_db.h  track_astronomical_bodies.c  track_astronomical_bodies.h  transponder_db.c  transponder_db.h  transponder_editor.c  transponder_editor.h  transponder_utility.c  ui.c  ui.h  xdg_basedir_extras.c  (+2 more)
tests/: CMakeLists.txt  locator-conversion-t.c  qth-t.c  string-array-t.c  tle-db-t.c  transponder-db-t.c  xdg-dirs-t.c
tests/test_data/: flyby.db.in  flyby.whitelist.in
tests/test_data/newer_tles/: amateur.txt.in
tests/test_data/old_tles/: part1.tle.in  part2.tle.in
utils/: convert-help-to-manformat.sh  fetch_satnogs_db.py  fetch_satnogs_db.py.in
utils/fodtrack-0.1/: fodtrack.c
vocalizer/: vocalizer.c
